einstellung_derive/src/snapshots/einstellung_derive__test__output_validator_deref_coercion.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- helper ---
fn non_empty(value: &str) -> Result<(), &'static str> {
    if value.is_empty() { Err("empty") } else { Ok(()) }
}

// ---------------------------------

/// --- input ---
#[derive(Config)]
struct AppConfig {
    #[config(validate = non_empty)]
    name: String,
}

/// --- output ---
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
struct AppConfigPartial {
    name: ::core::option::Option<String>,
}
#[automatically_derived]
impl ::einstellung::PartialConfig for AppConfigPartial {
    type Complete = AppConfig;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self {
            name: next.name.or(self.name),
        })
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(AppConfig {
            name: {
                let name: String = self
                    .name
                    .ok_or(
                        ::einstellung::ConfigError::MissingField(
                            ::einstellung::FieldPath::new("AppConfig", "name"),
                        ),
                    )?;
                if let Err(e) = (non_empty)(&name) {
                    return Err(::einstellung::ConfigError::Validation {
                        field: ::einstellung::FieldPath::new("AppConfig", "name"),
                        reason: ::einstellung::into_box_error(e),
                    });
                }
                name
            },
        })
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.name).is_some() {
            fields.push(::std::string::String::from("name"));
        }
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let fields = ::std::vec::Vec::new();
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Config for AppConfig {
    type Partial = AppConfigPartial;
}
